--- a/baigiamasis/scss/main.scss
+++ b/baigiamasis/scss/main.scss
@@ -1,21 +1,22 @@
 $colors: (
-primary: #1ccdca,
-secondary: #19b8b5,
-progresbarbg: #3c464d,
-progresbarsecondary: #14181b,
-webdesign: #0bacb8,
-programing: #3a94b2,
-html: #1ccdca,
-wordpres: #00c194,
-redlight: #e74c3c,
-reddark: #cf2c1d,
-slidertext: #aaa,
-headericon: #777777,
-borders: #eaebed
+        primary: #1ccdca,
+        secondary: #19b8b5,
+        progresbarbg: #3c464d,
+        progresbarsecondary: #14181b,
+        webdesign: #0bacb8,
+        programing: #3a94b2,
+        html: #1ccdca,
+        wordpres: #00c194,
+        redlight: #e74c3c,
+        reddark: #cf2c1d,
+        slidertext: #aaa,
+        headericon: #777777,
+        borders: #eaebed
 );
 #top_head {
   border-bottom: map_get($colors, borders) solid 1px;
 }
+
 .dropdown:hover > .dropdown-menu {
   display: block;
 }
@@ -42,6 +43,7 @@ borders: #eaebed
     background-color: map_get($colors, progresbarsecondary);
     margin: 0 50px 30px 50px;
   }
+
   div {
     h2 {
       margin: 20px 50px;
@@ -66,9 +68,10 @@ borders: #eaebed
 
 #slider {
   background-color: #14181b;
+
   #slider_bot {
     padding: 50px 15px;
-}
+  }
 
   h4 {
     color: white;
@@ -91,39 +94,78 @@ borders: #eaebed
     position: relative;
   }
 }
+
 #bar1 {
   width: 0;
 }
+
 #bar2 {
   width: 0;
 }
+
 #bar3 {
   width: 0;
 }
+
 #bar4 {
   width: 0;
 }
+
 #bar5 {
   width: 0;
 }
+
 .nav-item {
   a {
     padding: 6px 25px;
   }
 }
+
 .tab-content {
   border-bottom: #e5e5e5 solid 1px;
   border-left: #e5e5e5 solid 1px;
   border-right: #e5e5e5 solid 1px;
   padding: 20px 25px;
 }
+
 .spacer {
   padding: 90px 0;
 }
+
 #slash {
   font-size: 28px;
 }
+
 #borders_number {
   border-bottom: map_get($colors, borders) solid 1px;
   border-top: map_get($colors, borders) solid 1px;
+}
+
+.affix {
+  top: 0;
+  width: 100%;
+  z-index: 9999 !important;
+}
+
+.affix + .container {
+  padding-top: 70px;
+}
+
+.grow circle {
+  transition: all .25s ease-in-out;
+}
+
+.grow h6 {
+  transition: all .35s ease-in-out;
+}
+
+.grow :hover {
+  .circle {
+    background: map_get($colors, primary);
+    transform: scale(1.1);
+  }
+
+  h6 {
+    color: map_get($colors, primary);
+  }
 }
