--- a/baigiamasis/css/main.css
+++ b/baigiamasis/css/main.css
@@ -72,6 +72,13 @@
 .nav-item a {
   padding: 6px 25px; }
 
+.navbar input {
+  border-radius: 20px; }
+
+.navbar button {
+  background: none;
+  border-radius: 50%; }
+
 .tab-content {
   border-bottom: #e5e5e5 solid 1px;
   border-left: #e5e5e5 solid 1px;
@@ -88,18 +95,13 @@
   border-bottom: #eaebed solid 1px;
   border-top: #eaebed solid 1px; }
 
-.affix {
-  top: 0;
-  width: 100%;
-  z-index: 9999 !important; }
-
-.affix + .container {
-  padding-top: 70px; }
-
 .grow circle {
   transition: all .25s ease-in-out; }
 
 .grow h6 {
+  transition: all .35s ease-in-out; }
+
+.grow img {
   transition: all .35s ease-in-out; }
 
 .grow :hover .circle {
@@ -107,4 +109,13 @@
   transform: scale(1.1); }
 
 .grow :hover h6 {
+  color: #1ccdca; }
+
+.grow :hover .img {
+  transform: scale(1.1); }
+
+.color i {
+  color: #1ccdca; }
+
+.color span {
   color: #1ccdca; }
