--- a/baigiamasis/css/main.css
+++ b/baigiamasis/css/main.css
@@ -95,7 +95,7 @@
   border-bottom: #eaebed solid 1px;
   border-top: #eaebed solid 1px; }
 
-.grow circle {
+.grow .circle {
   transition: all .25s ease-in-out; }
 
 .grow h6 {
@@ -107,6 +107,8 @@
 .grow :hover .circle {
   background: #1ccdca;
   transform: scale(1.1); }
+  .grow :hover .circle i {
+    color: white; }
 
 .grow :hover h6 {
   color: #1ccdca; }
@@ -119,3 +121,22 @@
 
 .color span {
   color: #1ccdca; }
+
+#personel {
+  text-align: center;
+  font-size: 27px;
+  font-weight: lighter; }
+
+.team-photo img {
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  border: 1px solid grey;
+  padding: 5px;
+  background: white; }
+
+.text {
+  text-align: right; }
+
+.text2 {
+  text-align: left; }
