--- a/baigiamasis/css/main.css
+++ b/baigiamasis/css/main.css
@@ -214,3 +214,111 @@ iframe {
 footer .smal-img {
   width: 90px;
   height: 60px; }
+
+#img_div1 {
+  background-image: url("../css/img/flicker1.jpg");
+  width: 80px;
+  height: 80px;
+  position: relative; }
+
+#img_div2 {
+  background-image: url("../css/img/flicker2.jpg");
+  width: 80px;
+  height: 80px;
+  position: relative; }
+
+#img_div3 {
+  background-image: url("../css/img/flicker3.jpg");
+  width: 80px;
+  height: 80px;
+  position: relative; }
+
+#img_div4 {
+  background-image: url("../css/img/flicker4.jpg");
+  width: 80px;
+  height: 80px;
+  position: relative; }
+
+#img_div5 {
+  background-image: url("../css/img/flicker5.jpg");
+  width: 80px;
+  height: 80px;
+  position: relative; }
+
+#img_div6 {
+  background-image: url("../css/img/flicker6.jpg");
+  width: 80px;
+  height: 80px;
+  position: relative; }
+
+.change-color {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  background: #00c194;
+  transition: 1s;
+  opacity: 0; }
+  .change-color i {
+    font-size: 30px;
+    color: #fff;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%); }
+
+.change-color:hover {
+  opacity: 1; }
+
+#im_brd {
+  border-radius: 6px;
+  width: 90px;
+  height: 90px;
+  position: absolute;
+  left: 10px;
+  bottom: 15px; }
+
+#video {
+  position: relative; }
+  #video img {
+    width: 100%;
+    height: 180px;
+    border: 3px solid #1d1d1d;
+    border-radius: 4px; }
+  #video #arrow {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%); }
+    #video #arrow a {
+      text-decoration: none; }
+
+#arw {
+  font-size: 50px;
+  background: transparent;
+  border: none;
+  outline: none;
+  color: #fff; }
+
+#arrow:hover i {
+  animation: rotate;
+  animation-duration: 2s; }
+
+#play {
+  width: 100%;
+  height: 100%;
+  background: teal;
+  opacity: 0.3;
+  position: absolute;
+  bottom: 0;
+  border-radius: 4px;
+  transition: 2s; }
+
+#play:hover {
+  opacity: 0.6; }
+
+@keyframes rotate {
+  from {
+    transform: rotate(0deg); }
+  to {
+    transform: rotate(90deg); } }
