--- a/baigiamasis/scss/main.scss
+++ b/baigiamasis/scss/main.scss
@@ -17,6 +17,7 @@ $colors: (
 .sticky-top {
   background: white;
 }
+
 #top_head {
   border-bottom: map_get($colors, borders) solid 1px;
 }
@@ -221,6 +222,7 @@ $colors: (
 
 .text2 {
   text-align: left;
+
   a {
     border-radius: 50%;
     border: map_get($colors, borders) solid 1px;
@@ -234,9 +236,11 @@ $colors: (
     }
   }
 }
+
 .text3 {
-  color: map_get($colors,primary);
+  color: map_get($colors, primary);
 }
+
 .red {
   span {
     background: map_get($colors, redlight);
@@ -252,9 +256,10 @@ $colors: (
   button {
     border-radius: 100%;
     border: 1px solid aqua;
-    background: map_get($colors,primary);
+    background: map_get($colors, primary);
     width: 80px;
     height: 80px;
+
     i {
       color: white;
     }
@@ -269,51 +274,193 @@ $colors: (
 
 .grow2:hover {
   h5 {
-    color: map_get($colors,primary);
+    color: map_get($colors, primary);
   }
 }
+
 #form {
   h4 {
-    color: map_get($colors,primary);
+    color: map_get($colors, primary);
+
     i {
-      color: map_get($colors,primary);
+      color: map_get($colors, primary);
     }
   }
+
   input {
-    border: map_get($colors,borders) solid 1px;
+    border: map_get($colors, borders) solid 1px;
     width: 100%;
     border-radius: 4px;
   }
+
   textarea {
     width: 100%;
     border-radius: 4px;
     min-height: 200px;
-    border: map_get($colors,borders) solid 1px;
+    border: map_get($colors, borders) solid 1px;
   }
+
   button {
     border: none;
     width: 100%;
-    background: map_get($colors,primary);
+    background: map_get($colors, primary);
     transition: 1s;
   }
 }
+
 #form button:hover {
-  background: map_get($colors,progresbarbg);
+  background: map_get($colors, progresbarbg);
 }
+
 #map_text {
-  background: map_get($colors,maps);
+  background: map_get($colors, maps);
+
   h4 {
     color: white;
   }
 }
+
 iframe {
   width: 100%;
   height: 350px;
 }
+
 footer {
   .smal-img {
     width: 90px;
     height: 60px;
   }
+}
 
+#img_div1 {
+  background-image: url("../css/img/flicker1.jpg");
+  width: 80px;
+  height: 80px;
+  position: relative;
+}
+
+#img_div2 {
+  background-image: url("../css/img/flicker2.jpg");
+  width: 80px;
+  height: 80px;
+  position: relative;
+}
+
+#img_div3 {
+  background-image: url("../css/img/flicker3.jpg");
+  width: 80px;
+  height: 80px;
+  position: relative;
+}
+
+#img_div4 {
+  background-image: url("../css/img/flicker4.jpg");
+  width: 80px;
+  height: 80px;
+  position: relative;
+}
+
+#img_div5 {
+  background-image: url("../css/img/flicker5.jpg");
+  width: 80px;
+  height: 80px;
+  position: relative;
+}
+
+#img_div6 {
+  background-image: url("../css/img/flicker6.jpg");
+  width: 80px;
+  height: 80px;
+  position: relative;
+}
+
+.change-color {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  background: #00c194;
+  transition: 1s;
+  opacity: 0;
+
+  i {
+    font-size: 30px;
+    color: #fff;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+}
+
+.change-color:hover {
+  opacity: 1;
+}
+
+#im_brd {
+  border-radius: 6px;
+  width: 90px;
+  height: 90px;
+  position: absolute;
+  left: 10px;
+  bottom: 15px;
+}
+
+#video {
+  position: relative;
+
+  img {
+    width: 100%;
+    height: 180px;
+    border: 3px solid #1d1d1d;
+    border-radius: 4px;
+  }
+
+  #arrow {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+
+    a {
+      text-decoration: none;
+    }
+  }
+}
+
+#arw {
+  font-size: 50px;
+  background: transparent;
+  border: none;
+  outline: none;
+  color: #fff;
+}
+
+#arrow:hover i {
+  animation: rotate;
+  animation-duration: 2s;
+}
+
+#play {
+  width: 100%;
+  height: 100%;
+  background: teal;
+  opacity: 0.3;
+  position: absolute;
+  bottom: 0;
+  border-radius: 4px;
+  transition: 2s;
+}
+
+#play:hover {
+  opacity: 0.6;
+}
+
+@keyframes rotate {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(90deg);
+  }
 }
