--- a/baigiamasis/css/main.css
+++ b/baigiamasis/css/main.css
@@ -155,12 +155,24 @@
 .text3 {
   color: #1ccdca; }
 
-.red span {
-  background: #e74c3c;
-  color: white; }
+.red {
+  position: absolute;
+  top: 30%;
+  left: 20%;
+  font-size: 20px;
+  animation: red-ani;
+  animation-duration: 3s; }
+  .red h5 {
+    background: #e74c3c;
+    color: white; }
+  .red span {
+    background: #cf2c1d; }
 
-.red a {
-  background: #cf2c1d; }
+@keyframes red-ani {
+  0% {
+    left: -50px; }
+  100% {
+    left: 20%; } }
 
 .circle2 button {
   border-radius: 100%;
@@ -322,3 +334,53 @@ footer .smal-img {
     transform: rotate(0deg); }
   to {
     transform: rotate(90deg); } }
+
+.progress {
+  height: 40px;
+  overflow: hidden; }
+  .progress #bar1 {
+    background: #0bacb8; }
+  .progress #bar2 {
+    background: #3a94b2; }
+  .progress #bar3 {
+    background: #1ccdca; }
+  .progress #bar4 {
+    background: #00c194; }
+  .progress #bar5 {
+    background: #e74c3c; }
+
+.progress-bar {
+  transition: 2s;
+  width: 0;
+  position: relative; }
+
+.cloud {
+  position: absolute;
+  top: 50%;
+  right: 10px;
+  transform: translateY(-50%);
+  color: #14181b; }
+
+.inner-cloud {
+  background: white;
+  width: 100%;
+  height: 100%;
+  padding: 5px;
+  border-radius: 5px; }
+
+.cloudTriangle {
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 5px 10px 5px 0;
+  border-color: transparent white transparent transparent;
+  position: absolute;
+  left: -10px;
+  top: 50%;
+  transform: translateY(-50%); }
+
+.title-container {
+  position: absolute;
+  left: -9999px;
+  transition: 1s;
+  padding: 0 15px; }
