--- a/baigiamasis/scss/main.scss
+++ b/baigiamasis/scss/main.scss
@@ -242,13 +242,27 @@ $colors: (
 }
 
 .red {
-  span {
+  position: absolute;
+  top: 30%;
+  left: 20%;
+  font-size: 20px;
+  animation: red-ani;
+  animation-duration: 3s;
+  h5 {
     background: map_get($colors, redlight);
     color: white;
   }
-
-  a {
+  span {
     background: map_get($colors, reddark);
+  }
+}
+
+@keyframes red-ani {
+  0% {
+    left: -50px;
+  }
+  100% {
+    left: 20%;
   }
 }
 
@@ -464,3 +478,73 @@ footer {
     transform: rotate(90deg);
   }
 }
+
+// Begins Progress Bars
+.progress {
+  height: 40px;
+  overflow: hidden;
+
+  #bar1 {
+    background: map_get($colors, webdesign);
+  }
+
+  #bar2 {
+    background: map_get($colors, programing);
+  }
+
+  #bar3 {
+    background: map_get($colors, html);
+  }
+
+  #bar4 {
+    background: map_get($colors, wordpres);
+  }
+
+  #bar5 {
+    background: map_get($colors, redlight);
+  }
+}
+
+.progress-bar {
+  transition: 2s;
+  width: 0;
+  position: relative;
+}
+
+.cloud {
+  position: absolute;
+  top: 50%;
+  right: 10px;
+  transform: translateY(-50%);
+  color: map_get($colors, progresbarsecondary)
+}
+
+.inner-cloud {
+  background: white;
+  width: 100%;
+  height: 100%;
+  padding: 5px;
+  border-radius: 5px;
+}
+
+.cloudTriangle {
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 5px 10px 5px 0;
+  border-color: transparent white transparent transparent;
+
+  position: absolute;
+  left: -10px;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.title-container {
+  position: absolute;
+  left: -9999px;
+  transition: 1s;
+  padding: 0 15px;
+}
+
+// Ends Progress Bars
