--- a/baigiamasis/scss/main.scss
+++ b/baigiamasis/scss/main.scss
@@ -143,8 +143,13 @@ $colors: (
   border-top: map_get($colors, borders) solid 1px;
 }
 
-.grow .circle {
-  transition: all .25s ease-in-out;
+.grow {
+  .circle {
+  }
+
+  .circle-2 {
+    transition: all .25s ease-in-out;
+  }
 }
 
 .grow {
@@ -169,6 +174,10 @@ $colors: (
 
   h6 {
     color: map_get($colors, primary);
+  }
+
+  .circle-2 {
+    transform: scale(0.9);
   }
 
   .img {
@@ -241,28 +250,87 @@ $colors: (
   color: map_get($colors, primary);
 }
 
-.red {
+.car_text {
   position: absolute;
-  top: 30%;
+  top: 50%;
   left: 20%;
-  font-size: 20px;
+}
+
+.red {
+  left: 20%;
   animation: red-ani;
   animation-duration: 3s;
+
   h5 {
+    padding: 10px;
     background: map_get($colors, redlight);
     color: white;
   }
-  span {
+
+  button {
+    padding: 10px;
+    color: white;
+    border: none;
+    outline: none;
     background: map_get($colors, reddark);
   }
 }
 
 @keyframes red-ani {
   0% {
-    left: -50px;
+    transform: translateX(40%);
+    opacity: 0;
   }
   100% {
-    left: 20%;
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+.white {
+  left: 20%;
+  animation: white-ani;
+  animation-duration: 3s;
+
+  h3 {
+    padding: 10px;
+    background: white;
+    color: map_get($colors, reddark);
+  }
+}
+
+@keyframes white-ani {
+  0% {
+    transform: translateX(45%);
+    opacity: 0;
+  }
+  100% {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+
+.transp {
+  left: 20%;
+  animation: transp-ani;
+  animation-duration: 3s;
+
+  h5 {
+    padding: 10px;
+    background: #162319;
+    color: white;
+  }
+}
+
+@keyframes transp-ani {
+  0% {
+    transform: translateX(50%);
+    opacity: 0;
+  }
+  100% {
+    transform: translateX(0);
+    opacity: 1;
   }
 }
 
@@ -480,29 +548,40 @@ footer {
 }
 
 // Begins Progress Bars
+#bar1 {
+  background: map_get($colors, webdesign);
+}
+
+#bar2 {
+  background: map_get($colors, programing);
+}
+
+#bar3 {
+  background: map_get($colors, html);
+}
+
+#bar4 {
+  background: map_get($colors, wordpres);
+}
+
+#bar5 {
+  background: map_get($colors, redlight);
+}
+
+.running-number {
+  transition: 2s;
+  width: 100%;
+  opacity: 1;
+}
+
+.lift-up {
+  margin-top: -50px;
+  opacity: 0;
+}
+
 .progress {
   height: 40px;
   overflow: hidden;
-
-  #bar1 {
-    background: map_get($colors, webdesign);
-  }
-
-  #bar2 {
-    background: map_get($colors, programing);
-  }
-
-  #bar3 {
-    background: map_get($colors, html);
-  }
-
-  #bar4 {
-    background: map_get($colors, wordpres);
-  }
-
-  #bar5 {
-    background: map_get($colors, redlight);
-  }
 }
 
 .progress-bar {
@@ -514,9 +593,9 @@ footer {
 .cloud {
   position: absolute;
   top: 50%;
-  right: 10px;
+  right: 15px;
   transform: translateY(-50%);
-  color: map_get($colors, progresbarsecondary)
+  color: black;
 }
 
 .inner-cloud {
@@ -548,3 +627,63 @@ footer {
 }
 
 // Ends Progress Bars
+
+form#main {
+  input {
+    outline: none;
+  }
+
+  textarea {
+    outline: none;
+  }
+}
+
+#cloud_tags {
+  button {
+    color: map_get($colors, slidertext);
+    background: black;
+    border-radius: 4px;
+    border: transparent solid 2px;
+  }
+
+  button:hover {
+    border: map_get($colors, primary) solid 2px;
+    color: white;
+  }
+}
+
+footer {
+  background: map_get($colors, progresbarsecondary);
+}
+
+#z_index {
+  z-index: 1050 !important;
+}
+
+.form-group {
+  position: relative;
+}
+
+.fa-search {
+  color: map_get($colors, primary);
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+#shop_icon {
+  background: none;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  border: map_get($colors, borders) solid 1px;
+  outline: none;
+}
+
+.dropdown-menu {
+  background: map_get($colors, progresbarsecondary);
+
+  a:hover {
+    background: map_get($colors, progresbarsecondary);
+  }
+}
